# poor-mans-vpn

./: Cargo.toml  Dockerfile  README.md  client-config.toml  down.sh  genkey.sh  pubkey.sh  server-config.toml  up.sh
src/: client.rs  crypto.rs  error.rs  lib.rs  server.rs
